Fixed progress item broken styles

--- a/public/css/override.css
+++ b/public/css/override.css
@@ -35,24 +35,6 @@ a.dropdown-toggle {
 .Select-menu-outer {
   z-index: 999 !important;
 }
-/* TODO: this should be deleted */
-#search-bar [class^="icon-"], [class*=" icon-"] {
-  font-family: 'FuturaStd-Light', sans-serif !important;
-}
-.form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control {
-  background-color: #fff;
-}
-.container>h2,
-.hotel-content>h2 {
-  padding-top: 30px;
-}
-.Select-placeholder, .Select--single > .Select-control .Select-value {
-  color: #555 !important;
-  padding-left: 28px !important;
-  top: 2px !important;
-  font-size: 14px !important;
-}
-
 @media screen and (min-width: 768px) {
   .navbar-collapse.collapse {
     display: flex!important;
@@ -69,4 +51,25 @@ a.dropdown-toggle {
   .navbar-brand {
     flex-basis: 87%;
   }
+}
+
+/* TODO: This block is just for migration purposes. Should be deleted... */
+#search-bar [class^="icon-"], [class*=" icon-"] {
+  font-family: 'FuturaStd-Light', sans-serif !important;
+}
+.form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control {
+  background-color: #fff;
+}
+.container>h2,
+.hotel-content>h2 {
+  padding-top: 30px;
+}
+.Select-placeholder, .Select--single > .Select-control .Select-value {
+  color: #555 !important;
+  padding-left: 28px !important;
+  top: 2px !important;
+  font-size: 14px !important;
+}
+.form-group {
+  margin-bottom: 0 !important;
 }
